--- a/index.css
+++ b/index.css
@@ -1,47 +1,56 @@
-
+* {
+    font-family: sans-serif,'Kumbh Sans';
+    box-sizing: border-box;
+    
+}
   body {
+    width: 100%;
     font-family: Arial, sans-serif;
     background: linear-gradient(to bottom right, #241264, #410a5a);
     color: #fff;
     margin: 0;
     padding: 0;
+    min-height: 100%;
+
 }
 header {
     text-decoration: none;
     text-align: center;
-    font-size: large;
+    font-size: 2vw;
     color: #ffffff;
     background-color: #190932;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 15px;
     border-bottom:2px solid  #410a5a;
+    width: 100%;
     
     
 }
-.content
 
+.log{
+    text-decoration: none;
+}
 .log:hover{
 background-color: #b299d7;
 color: #241264;
-font-size: large;
+font-size: 2vw;
 border-radius: 50px;
 padding: 10px;
 text-decoration: none;
 }
 
-ul {
+.navbar {
     
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 100%;
     background-color:#190932 ;
-    position: fixed;
     overflow: hidden; 
     
     
-  }
-  li {
+}
+li {
   display: inline;
 }
 .res {
@@ -148,8 +157,149 @@ ul {
     border: none;
     cursor: pointer;
     color: #99c2d7;
+    border-radius: 50px;
   }
   
 .search-container:hover {
     background: #b299d7;
+    
+  }
+.footerbar{
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    padding: 20px;
+    width: 100%;
+    background-color:#190932 ;
+    color: #fff;
+    text-align: center;
+    
+}
+  .footer_games{
+    width: 33%;
+    float: left;
+  }
+  .footer_nh{
+    width: 33%;
+    float: left;
+  }
+  .footer_hs{
+    width: 33%;
+    float: left;
+}
+.writing{
+    color: red;
+
+
+}
+.links{
+    color: aqua;
+    padding: 0;
+    text-decoration: none;
+    border: #99c2d7;
+    border-radius: 50px;
+}
+.playstation{
+    text-decoration: none;
+}
+.xbox{
+    color: rgb(10, 226, 10);
+    text-decoration: none;
+}
+.pc{
+    color: white;
+    text-decoration: none;
+}
+.sim{
+    color: orange;
+    text-decoration: none;
+}
+#email{
+    color: white;
+    background-color: #190932;
+}
+.insta{
+    mix-blend-mode: multiply;
+    width: 60px;
+    border-radius: 50px;
+}
+.tiktok{
+    width: 50px;
+    mix-blend-mode: multiply;
+
+}
+.slider {
+    padding: 2rem;
+  }
+  
+  .slide {
+    display:flex ;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0%,0%,0%,0.25);
+    border-radius: 0.5rem;
+    border: none;
+  }
+  .slide img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+  }
+  .slide-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  .slide-nav a{
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #99c2d7;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+
+  }
+  .slide-nav a:hover{
+    opacity: 1;
+  }
+
+  
+  .slide_wrapper {
+    position: relative;
+    max-width: 48rem;
+    margin:0 auto;
+  }
+
+
+  .options{
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    padding: 20px;
+    width: 100%;
+    background-color:#a9a0b8 ;
+    color: #fff;
+    text-align: center;
+  }
+  .multiplayer{
+    width: 25%;
+    float: right;
+  }
+  .story{
+    width: 25%;
+    float: right;
+  }
+  .onlinegames{
+    width: 25%;
+    float: right;
+  }
+  .Racing{
+    width: 25%;
+    float: right;
   }
