--- a/signup.css
+++ b/signup.css
@@ -1,11 +1,17 @@
 /* signup.css */
-
+html {
+    font-family: sans-serif,'Kumbh Sans';
+    box-sizing: border-box;
+    height: 100%;
+}
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to bottom right, #241264, #410a5a);
     color: #fff;
     margin: 0;
     padding: 0;
+    min-height: 100%;
+    position: relative;
 }
 
 .container {
