--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ html {
     background-color: rgba(255, 255, 255, 0.1);
     
 }
-
 header {
     text-decoration: none;
     text-align: center;
@@ -32,7 +31,6 @@ header {
     
     
 }
-
 .log{
     text-decoration: none;
 }
@@ -44,23 +42,18 @@ border-radius: 50px;
 padding: 10px;
 text-decoration: none;
 }
-
 .navbar {
-    
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 100%;
     background-color:#190932 ;
     overflow: hidden; 
-    
-    
 }
 li {
   display: inline;
 }
 .res {
-    
     color: #fff;
     text-align: left;
     display: inline-block;
@@ -69,8 +62,6 @@ li {
     border-radius: 50px;
     position: relative;
     float: right;
-    
-
 }
 .res::after{
     content: '';
@@ -88,25 +79,18 @@ li {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
-
 .res:hover{
     background-color: #b299d7;
     color: #190932;
-
 }
-
 #logo{
     float: right;
     margin-left: auto;
     width: 75px;
     height: 78px;
     border-radius: 50px;
-
 }
-
-
-.offers{
-    
+.offers{ 
     color: #fff;
     text-align: left;
     display: block;
@@ -114,42 +98,34 @@ li {
     padding: 30px 30px;
     float: right;
     border-radius: 50px;
-
-
 }
 .offers:hover{
     background-color: #b299d7;
     color: #190932;
 }
 .support{
-    
     color: #fff;
     display: block;
     text-decoration: none;
     padding: 30px 30px;
     float: right; 
     border-radius: 50px;
- 
 }
 .support:hover{
     background-color: #b299d7;
     color: #190932;
-
 }
-.home{
-       
+.home{  
     color: #fff;
     display: block;
     text-decoration: none;
     padding: 30px 30px;
     float: right; 
     border-radius: 50px;
- 
 }
 .home:hover{
     background-color: #b299d7;
     color: #190932;
- 
 }
 .search-container {
     float: right;
@@ -162,12 +138,10 @@ li {
     cursor: pointer;
     color: #99c2d7;
     border-radius: 50px;
-  }
-  
+}
 .search-container:hover {
-    background: #b299d7;
-    
-  }
+    background: #b299d7;    
+}
 footer{
     background-color:#190932 ;
     color: #fff;
@@ -175,26 +149,22 @@ footer{
     text-align: center;
     position: sticky;
     bottom: 0;
-    width: 100%;
-    
-    
+    width: 100%; 
 }
-  .footer_games{
+.footer_games{
     width: 33%;
     float: left;
-  }
-  .footer_nh{
+}
+.footer_nh{
     width: 33%;
     float: left;
-  }
-  .footer_hs{
+}
+.footer_hs{
     width: 33%;
     float: left;
 }
 .writing{
     color: red;
-
-
 }
 .links{
     color: aqua;
@@ -230,13 +200,11 @@ footer{
 .tiktok{
     width: 50px;
     mix-blend-mode: multiply;
-
 }
 .slider {
     padding: 2rem;
-  }
-  
-  .slide {
+}
+.slide {
     display:flex ;
     aspect-ratio: 16 / 9;
     overflow-x: auto;
@@ -245,13 +213,13 @@ footer{
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0%,0%,0%,0.25);
     border-radius: 0.5rem;
     border: none;
-  }
-  .slide img{
+}
+.slide img{
     flex: 1 0 100%;
     scroll-snap-align: start;
     object-fit: cover;
-  }
-  .slide-nav{
+}
+.slide-nav{
     display: flex;
     column-gap: 1rem;
     position: absolute;
@@ -259,104 +227,37 @@ footer{
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
-  }
-  .slide-nav a{
+}
+.slide-nav a{
     width: 0.5rem;
     height: 0.5rem;
     border-radius: 50%;
     background-color: #99c2d7;
     opacity: 0.75;
     transition: opacity ease 250ms;
-
-  }
-  .slide-nav a:hover{
+}
+.slide-nav a:hover{
     opacity: 1;
-  }
-
-  
-  .slide_wrapper {
+}
+.slide_wrapper {
     position: relative;
     margin:0 auto;
-  }
+}
 .offr{
     margin-left: 45%;
     padding: 0%;
-    color: red;
-    
+    color: red;   
 }
-
-  .options{
-    padding: 180px;
-    width: 100%;
-    background-color:#a9a0b8 ;
-    color: #fff;
-    text-align: center;
-  }
-  .multiplayer{
-    width: 25%;
-    float: right;
-    
-  }
-  .mp{
-    color: aqua;
-    padding: 20px;
-    margin-top: 30%;
-    margin-right: 500%;
-    border-radius: 50%;
-    text-shadow: #99c2d7;
-
-  }
-  .mp:hover{
-    background-color: #190932;
-    opacity: 0.5;
-  }
-  .story{
-    width: 25%;
-    float: right;
-  }
-  .sg{
-    color: aqua;
-    padding: 20px;
-    margin-top: 30%;
-    margin-right: 500%;
-    border-radius: 50%;
-    text-shadow: #99c2d7;
-  }
-.sg:hover{
-    background-color: #190932;
-    opacity: 0.5;
+.op_contain{
+  padding: 180px;
+  width: 100%;
+  background-color:#b1a2c9 ;
+  color: #fff;
+  width: 100%;
 }
-.onlinegames{
-    width: 25%;
-    float: right;
+.op{
+  width: 25%;
 }
-.og{
-    color: aqua;
-    padding: 20px;
-    margin-top: 30%;
-    margin-right: 500%;
-    border-radius: 50%;
-    text-shadow: #99c2d7;
-}
-.og:hover{
-    background-color: #190932;
-    opacity: 0.5;
-}
-
-.Racing{
-    width: 25%;
-    float: right;
-}
-.rg{
-    color: aqua;
-    padding: 20px;
-    margin-top: 30%;
-    margin-right: 500%;
-    
-    border-radius: 50%;
-    text-shadow: #99c2d7;
-}
-.rg:hover{
-    background-color: #190932;
-    opacity: 0.5;
+.options_title{
+  color: aqua;
 }
