--- a/index.css
+++ b/index.css
@@ -175,6 +175,7 @@ footer{
 }
 .playstation{
     text-decoration: none;
+    color: blue;
 }
 .xbox{
     color: rgb(10, 226, 10);
@@ -213,6 +214,7 @@ footer{
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0%,0%,0%,0.25);
     border-radius: 0.5rem;
     border: none;
+    
 }
 .slide img{
     flex: 1 0 100%;
@@ -248,16 +250,42 @@ footer{
     padding: 0%;
     color: red;   
 }
-.op_contain{
-  padding: 180px;
-  width: 100%;
-  background-color:#b1a2c9 ;
-  color: #fff;
-  width: 100%;
+.op_contain {
+    background-color: #b1a2c9;
+    color: #fff;
+    width: 100%;
+    overflow: hidden; /* Clear float */
+  }
+  
+  .op {
+    width: 100%; /* Make sure it takes the full width of its container */
+  }
+  
+  .options_title {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .options_title > div {
+    position: relative; /* Make the div positioned */
+    width: 25%; /* Each div takes 25% width */
+    text-align: center;
+  }
+  
+  .options_title img {
+    max-width: 100%; /* Ensure images don't exceed the width of their containers */
 }
-.op{
-  width: 25%;
+  
+  .options_title h3 {
+    bottom: 0; /* Align text to the bottom */
+    left: 0; /* Align text to the left */
+    width: 100%; /* Make the text take the full width of its container */
+    margin: 0; /* Remove default margin */
+    padding: 0px; /* Add padding for better readability */
+    color: aqua;
 }
-.options_title{
-  color: aqua;
-}
+
+  
+  
+  
+ 
